# survival-datasets

./: .gitignore  README.md  pyproject.toml  setup.py
src/survdata/: __init__.py  datasets.py
tests/: test_data_loader.py
