[project]
name = "survival-datasets"
description = "Data loader for common datasets in Survival Analysis."
version = "0.1.6"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.8"
license-files = [ "LICENSE" ]
authors = [
    { name = "Christian Marius Lillelund" }
]
keywords = [
    "survival analysis",
    "time-to-event",
    "datasets",
    "machine learning",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "scikit-survival>=0.17.2",
    "pandas>=1.4.3",
    "numpy>=1.22.4",
    "shap>=0.41",
    "pyarrow>=11.0",
]

[project.urls]
Homepage = "https://github.com/thecml/survival-datasets"
Repository = "https://github.com/thecml/survival-datasets"
Issues = "https://github.com/thecml/survival-datasets/issues"

[dependency-groups]
dev = [
    {include-group = "lint"},
    {include-group = "test"},
]
test = [
    "pytest>=8.3.5",
    "pytest-cov>=5.0.0",
    "setuptools>=75.3.2",
]
lint = [
    "ruff>=0.4",
    "black>=24.3",
]
docs = [
    "mkdocs>=1.5",
    "mkdocs-material>=9.5",
]

[build-system]
requires = [
    "setuptools>=68",
    "wheel",
    "setuptools-scm>=8",
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["survdata*"]

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "no-local-version"
write_to = "src/survdata/_version.py"

[tool.pytest.ini_options]
addopts = "-ra -q --cov=survdata --cov-report=term-missing"
testpaths = ["tests"]

[tool.black]
line-length = 88
target-version = ["py38"]

[tool.ruff]
line-length = 88
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []
