[project]
name = "survival-datasets"
description = "Data loader for common datasets in Survival Analysis."
dynamic = ["version"]
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = [ "LICENSE" ]
authors = [
    { name = "Christian Marius Lillelund" }
]
keywords = [
    "survival analysis",
    "time-to-event",
    "datasets",
    "machine learning",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "scikit-survival>=0.17.2",
    "pandas>=1.4.3",
    "numpy>=1.22.4",
    "shap>=0.41",
    "pyarrow>=11.0",
]

[project.urls]
Homepage = "https://github.com/thecml/survival-datasets"
Repository = "https://github.com/thecml/survival-datasets"
Issues = "https://github.com/thecml/survival-datasets/issues"

[dependency-groups]
dev = [
    {include-group = "lint"},
    {include-group = "test"},
]
test = [
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
    "setuptools>=80.9.0",
]
lint = [
    "ruff>=0.14.5",
    "black>=25.11.0",
]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.0",
]

[build-system]
requires = [
    "setuptools>=80.9.0",
    "setuptools-scm>=8",
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["survdata*"]

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "no-local-version"
write_to = "src/survdata/_version.py"

[tool.pytest.ini_options]
addopts = "-ra -q --cov=survdata --cov-report=term-missing"
testpaths = ["tests"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []
